vehicle/tests/golden/error/typing/indexOutOfBoundsUnknown/indexOutOfBoundsUnknown.vcl
outOfBounds : Tensor Real [n] -> Real
outOfBounds x = x ! 1
